--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <glassfish.directory>/opt/glassfish4</glassfish.directory>
     </properties>
 
     <dependencies>
@@ -70,6 +71,40 @@
                     </execution>
                 </executions>
             </plugin>
+        	<plugin>
+                <groupId>org.glassfish.maven.plugin</groupId>
+                <artifactId>maven-glassfish-plugin</artifactId>
+                <version>2.1</version>
+                <executions>                    
+                    <execution>
+                        <id>gf-deploy</id>
+                        <goals>
+                            <goal>redeploy</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <user>admin</user>
+                    <glassfishDirectory>${glassfish.directory}</glassfishDirectory>
+                    <domainDirectory>${glassfish.directory}/glassfish/domains/</domainDirectory>
+                    <passwordFile>${basedir}/glassfishpasswordfile</passwordFile>
+                    <domain>
+                        <name>domain1</name>
+		        		<host>localhost</host>
+                        <adminPort>4848</adminPort>
+                        <httpPort>80</httpPort>
+                        <httpsPort>8443</httpsPort>
+                    </domain>
+                    <components>
+                        <component>
+                            <name>TravisGFEjb</name>
+                            <artifact>target/TravisGFEjb-1.0-SNAPSHOT.jar</artifact>
+                        </component>
+                    </components>
+                </configuration>
+            </plugin>
+        	 
         </plugins>
     </build>
 
