--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 before_script:
   - mysql -e 'create database SushiPartyDB;'
-  sudo apt-get update -q
-  sudo apt-get install unzip
-  wget http://download.java.net/glassfish/4.1/release/glassfish-4.1.zip
-  unzip glassfish-4.1.zip -d /opt
+  - sudo apt-get update -q
+  - sudo apt-get install unzip
+  - wget http://download.java.net/glassfish/4.1/release/glassfish-4.1.zip
+  - unzip glassfish-4.1.zip -d /opt
