--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ services:
 
 before_script:
   - mysql -e 'create database SushiPartyDB;'
-  - sudo apt-get update -qq
-  - sudo apt-get -y install unzip
+  - echo " kjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj "
+  - apt-get update -qq
+  - apt-get -y install unzip
   - wget http://download.java.net/glassfish/4.1/release/glassfish-4.1.zip
   - unzip glassfish-4.1.zip -d /opt
+  - echo " fin ----------------------------------------------------------------- "
