--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ services:
 
 before_install:
   - echo " kjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj "
+  - apt-get update -qq
  
