--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ services:
   - mysql
 
 before_install:
-  - echo " kjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj "
-  - apt-get update -qq
+  - sudo apt-get update -qq
+  - sudo apt-get -y install unzip
+  - wget http://download.java.net/glassfish/4.1/release/glassfish-4.1.zip
+  - unzip glassfish-4.1.zip -d /opt
  
