--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ services:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get -y install unzip
-  - wget http://download.java.net/glassfish/4.1/release/glassfish-4.1.zip
-  - unzip glassfish-4.1.zip -d /opt
+  - sudo wget http://download.java.net/glassfish/4.1/release/glassfish-4.1.zip
+  - sudo unzip glassfish-4.1.zip -d /opt
  
